force-app/main/default/objects/Leave_Request__c/fields/Holidays_Count__c.field-meta.xml
<CustomField>
    <fullName>Holidays_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Holidays Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>