force-app/main/default/objects/Leave_Request__c/fields/New_Balance_After_Approval__c.field-meta.xml
<CustomField>
    <fullName>New_Balance_After_Approval__c</fullName>
    <formula>Old_Balance__c - Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Balance After Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>