force-app/main/default/objects/Leave_Request__c/fields/Old_Balance__c.field-meta.xml
<CustomField>
    <fullName>Old_Balance__c</fullName>
    <formula>Owner:User.Current_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>