force-app/main/default/objects/Leave_Request__c/fields/Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Weekdays__c</fullName>
    <label>Weekdays</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>