force-app/main/default/objects/Leave_Request__c/validationRules/End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>If( End_Date__c - Start_Date__c &gt; 21,TRUE,FALSE)</errorConditionFormula>
    <errorMessage>End Date Cannot be more than 3 weeks</errorMessage>
</ValidationRule>