force-app/main/default/objects/Leave_Request__c/validationRules/End_date_is_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_is_Empty</fullName>
    <active>true</active>
    <description>for the LWC MSG.</description>
    <errorConditionFormula>OR(End_Date__c = null,TExt(End_Date__c)=&apos;&apos;)</errorConditionFormula>
    <errorMessage>End Date Cannot Be Empty</errorMessage>
</ValidationRule>