force-app/main/default/objects/Leave_Request__c/validationRules/Enddate_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Enddate_Before_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c&lt;Start_Date__c</errorConditionFormula>
    <errorMessage>End Date Cannot be Before Start Date</errorMessage>
</ValidationRule>