force-app/main/default/objects/Leave_Request__c/validationRules/No_Balance.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Balance</fullName>
    <active>true</active>
    <errorConditionFormula>New_Balance_After_Approval__c &lt;0</errorConditionFormula>
    <errorMessage>Insufficient Vacation Balance for this period</errorMessage>
</ValidationRule>