force-app/main/default/objects/Leave_Request__c/validationRules/Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>If( Start_Date__c &lt; Today(),TRUE,FALSE)</errorConditionFormula>
    <errorMessage>Start Date Cannot be in the Past</errorMessage>
</ValidationRule>