force-app/main/default/objects/Leave_Request__c/validationRules/Start_date_is_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_is_Empty</fullName>
    <active>true</active>
    <description>for the LWC MSG.</description>
    <errorConditionFormula>OR(Start_Date__c = null,TExt(Start_Date__c)=&apos;&apos;)</errorConditionFormula>
    <errorMessage>Start Date Cannot Be Empty</errorMessage>
</ValidationRule>