force-app/main/default/objects/Leave_Request__c/validationRules/Start_Date_Is_Weekend.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Is_Weekend</fullName>
    <active>true</active>
    <errorConditionFormula>if( MOD(Start_Date__c - DATE(1900, 1, 7),7)==0  ||  MOD(Start_Date__c - DATE(1900, 1, 7), 7)==6,TRUE,FALSE)</errorConditionFormula>
    <errorMessage>Cannot Start your Vacation with a week end day</errorMessage>
</ValidationRule>